--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Tomcat7"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ETFrameWorkV2.0.jar" sourcepath="/ETFrameWorkV1.0"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jdom.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/activation-1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/axis.jar"/>
@@ -59,5 +58,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlParserAPIs.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlpull_1_0_5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xstream-1.4.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ETFrameWorkV2.0.1.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
