--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,7 +2,16 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
-	<!-- resful服务开始 -->
+	<!--文件上传 -->
+	<servlet>		
+		<servlet-name>SINUploadFile</servlet-name>
+		<servlet-class>et.common.executor.fasade.SINUploadExecutorServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SINUploadFile</servlet-name>
+		<url-pattern>/servlet/SINFileUpload</url-pattern>
+	</servlet-mapping> 
+	<!--
 	<filter>
 		<filter-name>CorsFilter</filter-name>
 		<filter-class>et.common.servlet.CorsFilter</filter-class>
@@ -10,7 +19,8 @@
 	<filter-mapping>
 		<filter-name>CorsFilter</filter-name>
 		<url-pattern>*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
+	<!-- resful服务开始 -->
 	<context-param>
 		<param-name>resteasy.resources</param-name>
 		<!-- 需要修改注册resful服务 -->
